--- a/sources/VeloCity.Wpf.Presentation/Pages/Main/MainWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/Main/MainWindow.xaml
@@ -25,7 +25,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sprints="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.Sprints"
     xmlns:main="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.Main"
-    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
+    xmlns:team="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.Team"
 
     mc:Ignorable="d"
     Title="{Binding Title}"
@@ -70,79 +70,23 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </StatusBarItem>
         </StatusBar>
 
-        <Border
-            DockPanel.Dock="Left"
-            Background="{StaticResource PrimaryDarkBrush}"
-            Width="60"
-            BorderThickness="0 0 1 0"
-            BorderBrush="{StaticResource BorderBrush}"
-            Padding="0 20">
-
-            <StackPanel>
-
-                <Button
-                    Width="40"
-                    Height="40"
-                    Padding="0">
-
-                    <customControls:StartIcon
-                        Width="32"
-                        Height="32" />
-
-                </Button>
-
-                <Button
-                    Width="40"
-                    Height="40"
-                    Padding="0"
-                    Margin="0 10 0 0">
-
-                    B
-
-                </Button>
-
-                <Button
-                    Width="40"
-                    Height="40"
-                    Padding="0"
-                    Margin="0 10 0 0">
-
-                    C
-
-                </Button>
-
-            </StackPanel>
-
-        </Border>
-
-        <sprints:SprintsPage
+        <!--<sprints:SprintsPage
             DataContext="{Binding SprintsPageViewModel}"
-            Margin="0" />
+            Margin="0" />-->
 
-        <!--<TabControl TabStripPlacement="Left">
+        <TabControl TabStripPlacement="Left">
 
             <TabControl.Template>
                 <ControlTemplate TargetType="{x:Type TabControl}">
-                    <Grid>
-
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
+                    <DockPanel>
 
                         <Border
-                            Grid.Column="0"
-                            BorderThickness="0 0 10 0"
-                            BorderBrush="Transparent"
+                            DockPanel.Dock="Left"
+                            BorderThickness="0 0 1 0"
+                            BorderBrush="{StaticResource BorderBrush}"
                             Background="{StaticResource PrimaryDarkBrush}"
-                            ClipToBounds="True">
-
-                            <Border.Effect>
-                                <DropShadowEffect
-                                    Color="{StaticResource BorderColor}"
-                                    ShadowDepth="1"
-                                    BlurRadius="10" />
-                            </Border.Effect>
+                            ClipToBounds="True"
+                            Padding="5 10">
 
                             <TabPanel
                                 IsItemsHost="true"
@@ -150,7 +94,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         </Border>
 
                         <Border
-                            Grid.Column="1"
                             BorderThickness="0"
                             BorderBrush="{TemplateBinding BorderBrush}">
 
@@ -158,33 +101,137 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                         </Border>
 
-                    </Grid>
+                    </DockPanel>
                 </ControlTemplate>
             </TabControl.Template>
 
-            <TabItem Margin="10">
+            <TabControl.Resources>
+                <Style TargetType="{x:Type TabItem}">
+
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <ContentControl
+                                    Content="{TemplateBinding Content}"
+                                    FontSize="{StaticResource DefaultFontSize}"
+                                    IsTabStop="False">
+
+                                    <ContentControl.Style>
+                                        <Style TargetType="{x:Type ContentControl}">
+                                            <Style.Triggers>
+
+                                                <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=TabItem}}" Value="True">
+                                                    <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
+                                                    <Setter Property="Background" Value="{StaticResource AccentBrush}" />
+                                                </DataTrigger>
+
+                                                <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=TabItem}}" Value="False">
+                                                    <Setter Property="Foreground" Value="{StaticResource FontDisabledBrush}" />
+                                                    <Setter Property="Background" Value="{StaticResource AccentBrush}" />
+                                                </DataTrigger>
+
+                                            </Style.Triggers>
+                                        </Style>
+                                    </ContentControl.Style>
+                                </ContentControl>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type TabItem}">
+
+                                <Border
+                                    Name="PART_Panel"
+                                    Margin="5"
+                                    CornerRadius="2">
+
+                                    <ContentPresenter
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Center"
+                                        ContentSource="Header"
+                                        Margin="10" />
+
+                                </Border>
+
+                                <ControlTemplate.Triggers>
+
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="PART_Panel" Property="Background" Value="{StaticResource AccentBrush}" />
+                                    </Trigger>
+
+                                    <Trigger Property="IsSelected" Value="False">
+                                        <Setter TargetName="PART_Panel" Property="Background" Value="{StaticResource PrimaryLightBrush}" />
+                                    </Trigger>
+
+                                    <MultiTrigger>
+
+                                        <MultiTrigger.Conditions>
+                                            <Condition Property="IsSelected" Value="False" />
+                                            <Condition Property="IsMouseOver" Value="True" />
+                                        </MultiTrigger.Conditions>
+
+                                        <MultiTrigger.Setters>
+                                            <Setter TargetName="PART_Panel" Property="Background" Value="{StaticResource AccentBrush}" />
+                                        </MultiTrigger.Setters>
+
+                                    </MultiTrigger>
+
+                                </ControlTemplate.Triggers>
+
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+
+                </Style>
+            </TabControl.Resources>
+
+            <TabItem>
+
                 <TabItem.Header>
                     <Image
                         DockPanel.Dock="Left"
                         SnapsToDevicePixels="True"
                         Source="pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation;component/Images/sprints.png"
                         Width="40"
-                        VerticalAlignment="Center" />
+                        VerticalAlignment="Center">
+
+                        <Image.Effect>
+                            <DropShadowEffect
+                                Color="{StaticResource PrimaryColor}"
+                                Direction="0"
+                                ShadowDepth="0"
+                                BlurRadius="10" />
+                        </Image.Effect>
+
+                    </Image>
                 </TabItem.Header>
 
                 <sprints:SprintsPage
-                    DataContext="{Binding SprintsPageViewModel}"
-                    Margin="20" />
+                    DataContext="{Binding SprintsPageViewModel}" />
+
             </TabItem>
 
-            <TabItem Margin="10">
+            <TabItem>
+
                 <TabItem.Header>
                     <Image
                         DockPanel.Dock="Left"
                         SnapsToDevicePixels="True"
-                        Source="pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation;component/Images/team-members.png"
+                        Source="pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation;component/Images/sprints.png"
                         Width="40"
-                        VerticalAlignment="Center" />
+                        VerticalAlignment="Center">
+
+                        <Image.Effect>
+                            <DropShadowEffect
+                                Color="{StaticResource PrimaryColor}"
+                                Direction="0"
+                                ShadowDepth="0"
+                                BlurRadius="10" />
+                        </Image.Effect>
+
+                    </Image>
                 </TabItem.Header>
 
                 <team:TeamPage
@@ -192,7 +239,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
             </TabItem>
 
-        </TabControl>-->
+        </TabControl>
 
     </DockPanel>
 
